infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: us.gcr.io/gt-project-246100/client
---
# Defining a service here.
# This allows us to access the deployment defined above.
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  # Note that the default service is a defaultIP service
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
